--- a/shop_app/pubspec.yaml
+++ b/shop_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_stripe: ^9.5.0+1
+  google_fonts: ^6.1.0
   http: ^1.1.0
   liquid_pull_to_refresh: ^3.0.1
   provider: ^6.0.5
